test/library/standard/Reflection/error-in-fn-canResolve2b.good
error-in-fn-canResolve2b.chpl:7: In function 'f':
error-in-fn-canResolve2b.chpl:8: error: I am an error
error-in-fn-canResolve2b.chpl:18: note: in function called here
